fix scrollbar on windows

--- a/public/css/all-src.less
+++ b/public/css/all-src.less
@@ -8,7 +8,7 @@ body,
 .main {
   height: 100%;
   position: relative; // fix safari scrollbar hidden problem
-  overflow: scroll;
+  overflow-y: auto;
 }
 
 .sidebar {
